UI: Readability fix -> Login, Register, Forgot Password

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -101,12 +101,6 @@
   border-radius: 10px;  
 }
 
-.text-input {
-  color: black; 
-  font-size: 16px; 
-  height: 333px; 
-}
-
 .archive-screenshot {
   width: 333px; 
   padding: 13px;
@@ -897,6 +891,12 @@ a {
 
 input {
   color: #1e1e1e;
+}
+
+.form-input{
+  height: 45px !important;
+  font-size: medium;
+  background-color: rgb(245, 240, 240) !important;
 }
 
 section {
